--- a/taloudenseurantaohjelma.html
+++ b/taloudenseurantaohjelma.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Taloudenseurantaohjelma</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Taloudenseurantaohjelma</h1>
+<p>Heipähei!</p>
 
 </body>
 </html>
