main page adjustments

--- a/taloudenseurantaohjelma.html
+++ b/taloudenseurantaohjelma.html
@@ -21,8 +21,8 @@
         <section class="income">
           <h2>Kuukauden tulot</h2>
           <ul>
-            <li>2500€ <span>Palkka ✎</span></li>
-            <li>20€ <span>Muu ✎</span></li>
+            <li><span>2500€</span> Palkka <button class="icon-button">✎</button></li>
+            <li><span>20€</span> Muu <button class="icon-button">✎</button></li>
           </ul>
           <button>Lisää tulo</button>
         </section>
@@ -30,12 +30,12 @@
         <section class="expenses">
           <h2>Kuukauden menot</h2>
           <ul>
-            <li>630€ Vuokra ✎</li>
-            <li>220€ Ruoka ✎</li>
-            <li>200€ Laskut ✎</li>
-            <li>50€ Harrastus ✎</li>
-            <li>300€ Auto ✎</li>
-            <li>200€ Muu ✎</li>
+            <li><span>630€</span> Vuokra <button class="icon-button">✎</button></li>
+            <li><span>220€</span> Ruoka <button class="icon-button">✎</button></li>
+            <li><span>200€</span> Laskut <button class="icon-button">✎</button></li>
+            <li><span>50€</span> Harrastus <button class="icon-button">✎</button></li>
+            <li><span>300€</span> Auto <button class="icon-button">✎</button></li>
+            <li><span>200€</span> Muu <button class="icon-button">✎</button></li>
           </ul>
           <button>Lisää meno</button>
         </section>
@@ -52,7 +52,7 @@
         <section class="savings">
           <h2>Säästötavoitteet</h2>
           <div class="goal-bar">
-            <span>Uusi auto +</span>
+            <span>Uusi auto <button class="icon-button">+</button></span>
             <progress value="2100" max="4200"></progress>
           </div>
           <button>Lisää säästötavoite</button>
