--- a/taloudenseurantaohjelma.html
+++ b/taloudenseurantaohjelma.html
@@ -11,9 +11,9 @@
 <body>
     <header>
         <div class="top-bar">
-            <span class="month">Tammikuu 2025 ▼</span>
+            <button class="icon-button">Tammikuu 2025 ▼</button>
             <h1>Taloudenseurantaohjelma</h1>
-            <div class="profile-icon">👤</div>
+            <button class="icon-button">👤</button>
         </div>
     </header>
 
@@ -53,7 +53,7 @@
           <h2>Säästötavoitteet</h2>
           <div class="goal-bar">
             <span>Uusi auto <button class="icon-button">+</button></span>
-            <progress value="2100" max="4200"></progress>
+            <progress value="2800" max="4200"></progress>
           </div>
           <button>Lisää säästötavoite</button>
         </section>
