Dropdown button added

--- a/taloudenseurantaohjelma.html
+++ b/taloudenseurantaohjelma.html
@@ -11,7 +11,23 @@
 <body>
     <header>
         <div class="top-bar">
-            <button class="icon-button">Tammikuu 2025 ▼</button>
+            <div class="dropdown">
+                <button class="dropdown-button">Valitse kuukausi ▼</button>
+                <div class="dropdown-content">
+                    <a href="#">Tammikuu 2025</a>
+                    <a href="#">Joulukuu 2024</a>
+                    <a href="#">Marraskuu 2024</a>
+                    <a href="#">Lokakuu 2024</a>
+                    <a href="#">Syyskuu 2024</a>
+                    <a href="#">Elokuu 2024</a>
+                    <a href="#">Heinäkuu 2024</a>
+                    <a href="#">Kesäkuu 2024</a>
+                    <a href="#">Toukokuu 2024</a>
+                    <a href="#">Huhtikuu 2024</a>
+                    <a href="#">Maaliskuu 2024</a>
+                    <a href="#">Helmikuu 2024</a>
+                </div>
+            </div>
             <h1>Taloudenseurantaohjelma</h1>
             <button class="icon-button">👤</button>
         </div>
