--- a/taloudenseurantaohjelma.html
+++ b/taloudenseurantaohjelma.html
@@ -32,12 +32,12 @@
     </div>
     </header>
 
-    <!--Tulot osio-->
+    
     <main class="grid-container">
+      <!--Tulot osio-->
         <section class="income">
           <h2>Kuukauden tulot</h2>
-          <ul id="tuloLista">
-          </ul>
+          <ul id="tuloLista"></ul>
           <button id="openModal">Lisää tulo</button>
 
         <!--Tulojen popup ikkuna-->  
