--- a/taloudenseurantaohjelma.html
+++ b/taloudenseurantaohjelma.html
@@ -101,7 +101,7 @@
           <h2>Yhteenveto</h2>
           <p id="tuloTotal">Tulot: </p>
           <p id="expenseTotal">Menot: </p>
-          <p id="balance">Kuun tilanne: <strong></strong></p>
+          <p id="saldo">Kuun tilanne: <strong></strong></p>
           <canvas id="pieChart"></canvas>
         </section>
     </main>
