--- a/kirjautumissivu.html
+++ b/kirjautumissivu.html
@@ -8,12 +8,13 @@
 </head>
 
 <body>
+    <!--Yläpalkki-->
     <header>
         <div class="top-bar-login">
             <h1>Taloudenseurantaohjelma</h1>
         </div>
     </header>
-
+    <!--Kirjautuminen-->
     <main class="login-container">
         <form id="login-form" action="taloudenseurantaohjelma.html" method="post">
             <h2>Kirjaudu sisään</h2>
@@ -27,10 +28,12 @@
 
             <h2>Tai</h2>
 
+            <!--Google kirjautuminen-->
             <button class="google-button" type="button" onclick="window.location.href='taloudenseurantaohjelma.html'">
                 <img src="google-logo.png" alt="Google logo" width="40" height="40">
                 <span>Jatka Google-tunnuksilla</span>
             </button>
+            <!--Muut vaihtoehdot-->
             <a href="#">Luo uusi käyttäjä</a>
             <a href="#">Unohditko salasanan?</a>
         </form>
