--- a/taloudenseurantaohjelma.html
+++ b/taloudenseurantaohjelma.html
@@ -8,10 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-  <!--Top bar-->
+  <!--Yläpalkki-->
     <header>
       <div class="top-bar">
-        <!--dropdown menu-->
+        <!--Kuukausivalikko-->
         <div class="dropdown">
             <button class="dropdown-button">Tammikuu 2025 ▼</button>
             <div class="dropdown-content">
@@ -29,7 +29,7 @@
                 <a href="#">Helmikuu 2024</a>
             </div>
         </div>
-        <!--profile menu-->
+        <!--Profiili valikko-->
         <h1>Taloudenseurantaohjelma</h1>
         <div class="profile-menu" id="profile-menu">
             <button class="icon-button" onclick="toggleMenu()">👤</button>
