--- a/taloudenseurantaohjelma.html
+++ b/taloudenseurantaohjelma.html
@@ -45,7 +45,7 @@
                 <a href="#">Lisää käyttäjä talouteen</a>
                 <a href="#">Tuki</a>
                 <div class="log-out">
-                  <button onclick="window.location.href='index.html'">Kirjaudu ulos</button>
+                  <button onclick="window.location.href='/index.html'">Kirjaudu ulos</button>
                 </div>
             </div>
         </div>
